# Chofesh.ai

./: .env.example  API_PRICING_COMPARISON.md  AUDIT_REPORT.md  AUTONOMOUS_AGENT_ARCHITECTURE.md  BUSINESS_PLAN.md  CODE_AUDIT_REPORT_JAN2026.md  CODE_OF_CONDUCT.md  COMPREHENSIVE_AUDIT_REPORT.md  CONTRIBUTING.md  CRITICAL_ACTIONS_REQUIRED.md  Chofesh_AI_Business_Plan_2026-2028.md  DEPLOYMENT_RULES.md  FEATURE_IMPLEMENTATION_ROADMAP.md  FUNCTIONAL_TEST_RESULTS.md  FUTURE_ROADMAP.md  GOOGLE_SEARCH_CONSOLE_SETUP.md  INTEGRATION_GUIDES.md  JUDGE0_SETUP.md  LICENSE  MANUS_API_ANALYSIS.md  MANUS_API_AUDIT.md  MASTER_COMMAND_USAGE.md  PRICING_RESEARCH.md  README.md  ROADMAP.md  RUNWARE_ROADMAP.md  SECURITY.md  SECURITY_AUDIT_REPORT.md  add-dob-column.js  add-dob-migration.sql  agent_memory_migration.sql  ai-tools-repository-findings.md  audit-research.md  audit-results.txt  basedlabs-research.md  business_plan_research.md  chofesh_x_launch_post.md  docker-compose.yml  eslint.security.config.js  financial_projections.json  (+43 more)
.github/: dependabot.yml
api/: index.js
client/: index.html
docs/: CREDITS_SYSTEM_PROPOSAL.md  UNLUCID_FEATURE_ANALYSIS.md  eternalai-pricing.md  luma-ai-pricing.md  venice-pricing.md
drizzle/: 0001_soft_lord_hawal.sql  0002_equal_darkstar.sql  0003_bouncy_ego.sql  0004_medical_vin_gonzales.sql  0005_cultured_eddie_brock.sql  0006_remarkable_baron_zemo.sql  0007_crazy_logan.sql  0008_needy_gambit.sql  0009_acoustic_sentinels.sql  0010_mean_gateway.sql  0011_magical_stature.sql  schema.ts  (+17 more)
sdk/: .gitignore  CHANGELOG.md  LICENSE  MANIFEST.in  README.md  pyproject.toml  setup.py
sdk/chofesh/: __init__.py  agent.py  conversation.py  exceptions.py  llm.py  message.py
sdk/chofesh/tools/: __init__.py  base.py  code_execution.py  github.py  image_generation.py  web_search.py
sdk/examples/: async_chat.py  basic_chat.py  custom_tool.py  github_automation.py  multi_tool.py  streaming.py  web_search.py
sdk/tests/: __init__.py  test_agent.py  test_agent_extended.py  test_conversation.py  test_exceptions.py  test_integration.py  test_llm.py  test_llm_extended.py  test_message.py  test_tools_base.py  test_tools_code_execution.py  test_tools_github.py  test_tools_github_comprehensive.py  test_tools_image_generation.py  test_tools_web_search.py
(+388 files in other folders)
